--- a/consumer_service/pom.xml
+++ b/consumer_service/pom.xml
@@ -50,6 +50,17 @@
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.javers</groupId>
+            <artifactId>javers-spring-boot-starter-sql</artifactId>
+            <version>6.6.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.javers</groupId>
+            <artifactId>javers-spring</artifactId>
+            <version>6.6.5</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 
     <build>
