--- a/consumer_service/src/main/resources/application.yml
+++ b/consumer_service/src/main/resources/application.yml
@@ -1,5 +1,5 @@
-billing:
-  kafka: blusalt_billing
+kafka_settings:
+  billing: blusalt_billing
 spring:
   kafka:
     bootstrap-servers: 'localhost:9092'
